# backend

./: .dockerignore  .env.example  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  conftest.py  fly.dev.toml  fly.logshipper.toml  fly.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy-api.yml  deploy-inference.yml  neo4j-keepalive.yml  pytest.yml
app/: apple_identifiers.py  config.py  lifespan.py  main.py  test_apple_identifiers.py  test_config.py  test_lifespan.py  test_main.py  test_smoke.py
app/asc/: OPTIONAL_FEATURES.md  app_privacy.py  app_review_info.py  listing.py  load_listings.py  test_app_privacy.py  test_app_review_info.py  test_listing.py  test_load_listings.py
app/audio_retention/: prune_expired_audio.py  test_prune_expired_audio.py  test_run_prune_scheduler.py
app/auth/: extract_bearer.py  fetch_jwks.py  find_jwk_by_kid.py  jwk.py  resolve_current_user.py  test_resolve_current_user.py  test_verify_clerk_jwt.py  verify_clerk_jwt.py
app/daily_content/: dedup_news_across_categories.py  enrich_news_details.py  fetch_article_details.py  fetch_news_by_category.py  generate_quizzes.py  models.py  refresh_daily_content.py  run_daily_content_scheduler.py  test_daily_content_constants.py  test_daily_content_models.py  test_dedup_news_across_categories.py  test_enrich_news_details.py  test_fetch_article_details.py  test_fetch_news_by_category.py  test_generate_quizzes.py  test_refresh_daily_content.py  test_run_daily_content_scheduler.py
app/iap/: subscription.py  subscription_groups_list.py  subscriptions_list.py  test_subscription.py  test_subscription_groups_list.py  test_subscriptions_list.py
app/notifications/: build_milestone_alert.py  build_reminder_push.py  build_streak_warning_alert.py  build_subscription_alert.py  build_weekly_recap_alert.py  celebrate_streak_milestone.py  choose_reminder.py  find_daily_content_candidates.py  find_reminder_candidates.py  find_streak_warning_candidates.py  find_weekly_recap_candidates.py  is_streak_milestone.py  notification_kinds.py  notify_subscription_change.py  record_notification.py  run_reminder_scheduler.py  send_daily_content_nudge.py  send_reminders.py  send_streak_warning.py  send_weekly_recap.py  subscription_transition.py  test_build_daily_content_alert.py  test_build_milestone_alert.py  test_build_reminder_push.py  test_build_streak_warning_alert.py  test_build_subscription_alert.py  test_build_weekly_recap_alert.py  test_celebrate_streak_milestone.py  test_choose_reminder.py  test_find_daily_content_candidates.py  test_find_reminder_candidates.py  test_find_streak_warning_candidates.py  test_find_weekly_recap_candidates.py  test_is_streak_milestone.py  test_notify_subscription_change.py  test_run_reminder_scheduler.py  test_send_daily_content_nudge.py  test_send_reminders.py  test_send_streak_warning.py  test_send_weekly_recap.py  (+5 more)
app/personas/: real_person_frame.py  tutor_frame.py
app/profile/: correction_frequency.py  format_goals_for_prompt.py  get_language.py  goal.py  is_accent_in_language.py  is_language_name.py  languages.py  proficiency.py  test_correction_frequency.py  test_format_goals_for_prompt.py  test_get_language.py  test_is_accent_in_language.py  test_is_language_name.py  test_languages.py  test_proficiency.py  test_tutor_speaking_speed.py  tutor_speaking_speed.py
app/routers/: announce_auth.py  announce_onboarding.py  fetch_kg.py  fetch_today_content.py  is_low_signal_auth_failure.py  list_languages.py  list_voices.py  plan_limits.py  record_event.py  record_experience_rating.py  register_apns_token.py  remove_kg_entity.py  test_announce_auth.py  test_announce_onboarding.py  test_consent.py  test_events.py  test_fetch_kg.py  test_fetch_today_content.py  test_is_low_signal_auth_failure.py  test_kg_router.py  test_list_languages.py  test_list_voices.py  test_plan_limits.py  test_reads_survive_external_failures.py  test_record_event.py  test_record_experience_rating.py  test_voices.py
app/scripts/: regenerate_cefr_vocab.py
app/services/: fallback.py  guess_name_pronunciation.py  test_fallback.py  test_guess_name_pronunciation.py
inference/: VOICES.md  boost_loudness.py  compute_scaledown_window.py  download_weights.py  inactivity_thresholds.py  start_aiohttp_in_thread.py  test_compute_scaledown_window.py  test_inactivity_thresholds.py  ticket_auth_middleware.py  voice.py  voice_app.py  voice_image.py  warm_voice.py
migrations/: 0001_initial.sql  0002_cefr_frequency.sql  0003_persona_description.sql  0004_personas_bucket_b_likes_consent.sql  0005_drop_cefr_tables.sql  0006_drop_user_cefr_level.sql  0007_transcripts_turn_model.sql  0008_transcripts_restore_surrogate_id.sql  0009_personas_drop_objective.sql  0010_users_name_pronunciation.sql  0011_personas_target_language.sql  0012_target_language_to_users.sql  0013_users_explanation_language.sql  0014_rename_explanation_to_help_language.sql  0015_users_tutor_speaking_speed.sql  0016_users_proficiency_band.sql  0017_users_allow_native_language_assist.sql  0018_users_native_languages_multi.sql  0019_users_drop_help_language_and_assist.sql  0020_daily_content.sql  0021_daily_content_per_topic.sql  0022_waitlist.sql  0023_session_audio.sql  0024_multi_target_accents.sql  0025_session_model_audio.sql  0026_session_audio_rename_mic_columns.sql  0027_session_audio_mic_columns_nullable.sql  0028_session_audio_source_discriminator.sql  0029_recall.sql  0030_rename_user_display_name_to_preferred_name.sql  0031_target_accents_not_null.sql  0032_users_deleted_at.sql  0033_persona_reports.sql  0034_session_target_language.sql  0035_session_model_and_tokens.sql  0036_experience_ratings.sql  0037_notification_prefs.sql  0038_notification_log.sql  0039_user_correction_frequency.sql  0040_session_cost_usd.sql  (+1 more)
scripts/: check_env_drift.py  compute_unit_economics.py  count_user_data.py  generate_neon_types.py  merge_cross_db.py  merge_same_db.py  merge_user_data.py  probe_modal_voice.py  read_env_value.py  read_neon_url.py  regenerate_cefr_vocab.py  test_read_env_value.py  test_verify_prod_oauth.py  verify_prod_oauth.py
(+586 files in other folders)
