[project]
name = "palkietalkie-backend"
version = "0.1.0"
description = "Palkie Talkie FastAPI backend: Clerk auth, Stripe + ASN webhooks, NLP pipelines, KG, push."
requires-python = ">=3.14"
authors = [{ name = "Palkie Talkie" }]
license = { text = "Proprietary" }

dependencies = [
    "aioapns>=4.0",
    "app-store-server-library>=3.1.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "neo4j>=6.2.0",
    "openai>=2.38.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    # spacy stable wheels max out at cp313; we're on cp314. Keep floor at the last cp314-installable version until spacy 4.x stable ships with cp314 wheels (currently only 4.0.0.dev3 pre-release supports it).
    "spacy>=3.7.6",
    "stripe>=15.1.0",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "asyncpg-stubs>=0.30.0",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
    "testcontainers[postgres]>=4.7.0",
    "types-python-jose>=3.3.4.20240106",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv", "inference"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "C4", "RET", "SIM", "TID"]
# E501 disabled globally: project rule is "never wrap comments for width" (single long line is fine).
ignore = ["S101", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"app/routers/personas/build_patch_sql.py" = ["S608"]  # PATCH SQL built from a fixed allow-list, all user data flows via $N parameters
"app/services/apple_asn/_sdk.py" = ["N818"]  # VerificationException name matches the Apple SDK's exception class
"app/services/google_calendar/refresh_token.py" = ["S105"]  # false positive: TOKEN_URL is a URL
"**/test_*.py" = ["S101", "S106", "S105", "S107", "S311", "S608", "B017", "ASYNC230"]
"conftest.py" = ["S101", "S106", "S105", "S107", "S311", "S608", "B017", "ASYNC230", "E402"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
# Strict-ish: catch real bugs without exploding on third-party libs
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    "inference/",
    "(^|/)test_[^/]+\\.py$",
    "(^|/)conftest\\.py$",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/scripts/*",
    "app/**/test_*.py",
    "app/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
